feat: add api doc for event and event category
